clusters/app.ci/release-controller/deploy-hypershift-controller.yaml
##################################################################################
#                                DO NOT EDIT
# File generated during execution of: generate-release-controllers.py
##################################################################################


#---------------------------------------------------------------------------------
# hypershift_resources.py added the following resource
#---------------------------------------------------------------------------------

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: release-controller-hypershift
  namespace: ci
spec:
  host: hypershift-release.apps.ci.l2s4.p1.openshiftapps.com
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: release-controller-api-hypershift
---
#---------------------------------------------------------------------------------
# hypershift_resources.py added the following resource
#---------------------------------------------------------------------------------

apiVersion: v1
kind: Service
metadata:
  name: release-controller-hypershift
  namespace: ci
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: release-controller-hypershift
---
#---------------------------------------------------------------------------------
# hypershift_resources.py added the following resource
#---------------------------------------------------------------------------------

apiVersion: v1
kind: Service
metadata:
  name: release-controller-api-hypershift
  namespace: ci
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: release-controller-api-hypershift
---
#---------------------------------------------------------------------------------
# hypershift_resources.py added the following resource
#---------------------------------------------------------------------------------

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    keel.sh/matchTag: 'true'
    keel.sh/policy: force
    keel.sh/pollSchedule: '@every 5m'
    keel.sh/trigger: poll
  name: release-controller-hypershift
  namespace: ci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-controller-hypershift
  template:
    metadata:
      labels:
        app: release-controller-hypershift
    spec:
      containers:
      - args:
        - --repo=https://github.com/openshift/release.git
        - --ref=main
        - --period=30s
        - --root=/tmp/git-sync
        - --max-failures=3
        command:
        - /git-sync
        image: quay-proxy.ci.openshift.org/openshift/ci:ci_git-sync_v4.3.0
        name: git-sync
        resources:
          requests:
            cpu: '0.5'
            memory: 1Gi
        volumeMounts:
        - mountPath: /tmp/git-sync
          name: release
      - command:
        - /usr/bin/release-controller
        - --release-namespace=hypershift-operator
        - --prow-config=/etc/config/config.yaml
        - --supplemental-prow-config-dir=/etc/config
        - --job-config=/var/repo/release/ci-operator/jobs
        - --prow-namespace=ci
        - --job-namespace=ci-release
        - --tools-image-stream-tag=release-controller-bootstrap:tools
        - --release-architecture=amd64
        - -v=4
        - --manifest-list-mode
        image: quay-proxy.ci.openshift.org/openshift/ci:ci_release-controller_latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 3
          periodSeconds: 3
        name: controller
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 3
          timeoutSeconds: 600
        volumeMounts:
        - mountPath: /etc/config
          name: config
          readOnly: true
        - mountPath: /var/repo
          name: release
        - mountPath: /etc/github
          name: oauth
          readOnly: true
        - mountPath: /etc/jira
          name: jira
          readOnly: true
        - mountPath: /etc/kubeconfigs
          name: release-controller-kubeconfigs
          readOnly: true
        - mountPath: /tmp/home
          name: home
        - mountPath: /tmp/git
          name: oc-cache
        - mountPath: /tmp/home/.git-credentials
          name: git-credentials
          subPath: .git-credentials
        - mountPath: /tmp/pull-secret
          name: pull-secret
      serviceAccountName: release-controller
      volumes:
      - configMap:
          defaultMode: 420
          name: config
        name: config
      - emptyDir: {}
        name: release
      - name: oauth
        secret:
          defaultMode: 420
          secretName: github-credentials-openshift-merge-robot
      - name: jira
        secret:
          defaultMode: 420
          secretName: jira-credentials-openshift-jira-robot
      - name: release-controller-kubeconfigs
        secret:
          defaultMode: 420
          secretName: release-controller-kubeconfigs
      - emptyDir: {}
        name: home
      - emptyDir: {}
        name: oc-cache
      - name: git-credentials
        secret:
          defaultMode: 420
          items:
          - key: git_url_with_credentials
            path: .git-credentials
          secretName: release-controller-oc-git-credentials
      - name: pull-secret
        secret:
          defaultMode: 420
          secretName: release-controller-oc-pull-secret
---
#---------------------------------------------------------------------------------
# hypershift_resources.py added the following resource
#---------------------------------------------------------------------------------

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    keel.sh/matchTag: 'true'
    keel.sh/policy: force
    keel.sh/pollSchedule: '@every 5m'
    keel.sh/trigger: poll
  name: release-controller-api-hypershift
  namespace: ci
spec:
  replicas: 3
  selector:
    matchLabels:
      app: release-controller-api-hypershift
  template:
    metadata:
      labels:
        app: release-controller-api-hypershift
    spec:
      containers:
      - command:
        - /usr/bin/release-controller-api
        - --release-namespace=hypershift-operator
        - --prow-namespace=ci
        - --job-namespace=ci-release
        - --tools-image-stream-tag=release-controller-bootstrap:tools
        - --release-architecture=amd64
        - --enable-jira
        - --jira-endpoint=https://redhat.atlassian.net
        - --jira-username=openshift-release-controller-jira-bot@redhat.com
        - --jira-password-file=/etc/jira/bot-password
        - --release-qualifiers-config-path=/etc/qualifiers-config/release-qualifiers.yaml
        - -v=4
        image: quay-proxy.ci.openshift.org/openshift/ci:ci_release-controller-api_latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 3
          periodSeconds: 3
        name: controller
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 3
          timeoutSeconds: 600
        volumeMounts:
        - mountPath: /etc/jira
          name: jira
          readOnly: true
        - mountPath: /etc/qualifiers-config
          name: qualifiers-config
          readOnly: true
        - mountPath: /etc/kubeconfigs
          name: release-controller-kubeconfigs
          readOnly: true
        - mountPath: /tmp/home
          name: home
        - mountPath: /tmp/git
          name: oc-cache
        - mountPath: /tmp/home/.git-credentials
          name: git-credentials
          subPath: .git-credentials
        - mountPath: /tmp/pull-secret
          name: pull-secret
      serviceAccountName: release-controller
      volumes:
      - name: jira
        secret:
          defaultMode: 420
          secretName: jira-credentials-openshift-jira-robot
      - configMap:
          name: release-controller-release-qualifiers
        name: qualifiers-config
      - name: release-controller-kubeconfigs
        secret:
          defaultMode: 420
          secretName: release-controller-kubeconfigs
      - emptyDir: {}
        name: home
      - emptyDir: {}
        name: oc-cache
      - name: git-credentials
        secret:
          defaultMode: 420
          items:
          - key: git_url_with_credentials
            path: .git-credentials
          secretName: release-controller-oc-git-credentials
      - name: pull-secret
        secret:
          defaultMode: 420
          secretName: release-controller-oc-pull-secret
